--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,13 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Electron</title>
+    <title>Spell Gallery</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
+<!--    <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'"
-    />
-    <script src="http://localhost:8098"></script>
+    />-->
   </head>
 
   <body>
